--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 	left: -200;
 	width: 500%;
 	height: 500%;
-	background: url("../img/Brick_01.png");
+	background: url("img/Brick_01.png");
 	
 }
 
